Ahora las recetas consumen runas, cambiados los twigs y los controladores para reflejarlo, asi como la entity Recipe. Cambiados estilos.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,19 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 1.5b</div>
+                <div class="panel-body text-responsive">
+                    <ul>
+                        <li>Comienza la Temporada 5.</li>
+                        <li>Ahora las recetas de alquimia cuestan <span class="label label-artifact">Runas</span> además de <span class="label label-extra">Oro</span>.</li>
+                        <li>Ahora pueden comprarse <span class="label label-artifact">Runas</span> a través de PayPal.</li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Beta abierta</div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.4b</div>
                 <div class="panel-body text-responsive">
                     <ul>
@@ -26,7 +39,7 @@
                         <li>Se ha reducido el tamaño de muchas imágenes para agilizar la carga de la web en dispositivos móviles.</li>
                     </ul>
                 </div>
-                <div class="panel-footer text-center">Beta cerrada</div>
+                <div class="panel-footer text-center">Beta abierta</div>
             </div>
         </div>
         <div class="col-xs-12">
@@ -116,7 +129,7 @@
                         <li>Se ha añadido una segunda condición de victoria, la <span class="label label-extra">Ira de los Dioses</span> consulta la ayuda para entender cómo funciona.</li>
                     </ul>
                 </div>
-                <div class="panel-footer text-center">Beta cerrada</div>
+                <div class="panel-footer text-center">Beta abierta</div>
             </div>
         </div>
         <div class="col-xs-12">
