--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,25 +19,27 @@
             {% endstylesheets %}
         {% endblock %}
         {# favicon http://realfavicongenerator.net y http://fa2png.io/ #}
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=vMMPPmQLmG">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=vMMPPmQLmG">
-        <link rel="icon" type="image/png" href="/favicon-32x32.png?v=vMMPPmQLmG" sizes="32x32">
-        <link rel="icon" type="image/png" href="/favicon-194x194.png?v=vMMPPmQLmG" sizes="194x194">
-        <link rel="icon" type="image/png" href="/favicon-96x96.png?v=vMMPPmQLmG" sizes="96x96">
-        <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=vMMPPmQLmG" sizes="192x192">
-        <link rel="icon" type="image/png" href="/favicon-16x16.png?v=vMMPPmQLmG" sizes="16x16">
-        <link rel="manifest" href="/manifest.json?v=vMMPPmQLmG">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg?v=vMMPPmQLmG" color="#5bbad5">
-        <link rel="shortcut icon" href="/favicon.ico?v=vMMPPmQLmG">
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=qAArr48GdJ">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=qAArr48GdJ">
+        <link rel="icon" type="image/png" href="/favicon-32x32.png?v=qAArr48GdJ" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicon-194x194.png?v=qAArr48GdJ" sizes="194x194">
+        <link rel="icon" type="image/png" href="/favicon-96x96.png?v=qAArr48GdJ" sizes="96x96">
+        <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=qAArr48GdJ" sizes="192x192">
+        <link rel="icon" type="image/png" href="/favicon-16x16.png?v=qAArr48GdJ" sizes="16x16">
+        <link rel="manifest" href="/manifest.json?v=qAArr48GdJ">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg?v=qAArr48GdJ" color="#5bbad5">
+        <link rel="shortcut icon" href="/favicon.ico?v=qAArr48GdJ">
+        <meta name="apple-mobile-web-app-title" content="Wyzard">
+        <meta name="application-name" content="Wyzard">
         <meta name="msapplication-TileColor" content="#603cba">
-        <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=vMMPPmQLmG">
+        <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=qAArr48GdJ">
         <meta name="theme-color" content="#ffffff">
     </head>
     {# body #}
