--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="#" role="button">10 Runas por<br><h2><i class="fa fa-fw fa-cc-paypal"></i> 0,99€</h2></a>
+                    <a class="btn btn-default" href="{{ path('archmage_payment_purchase_prepare') }}" role="button">20 Runas por<br><h2><i class="fa fa-fw fa-cc-paypal"></i> 0,99€</h2></a>
                     <a class="btn btn-default btn-lg" href="#" role="button">50 Runas por<br><h1><i class="fa fa-fw fa-cc-paypal"></i> 2,99€</h1></a>
                     <a class="btn btn-default" href="#" role="button">200 Runas por<br><h2><i class="fa fa-fw fa-cc-paypal"></i> 4,99€</h2></a>
                 </div>
