--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -28,6 +28,7 @@
                     <a class="btn btn-sm btn-primary" href="https://www.jetbrains.com/phpstorm/">PHPStorm</a>
                     <a class="btn btn-sm btn-primary" href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
                     <a class="btn btn-sm btn-primary" href="http://datatables.net/">DataTables</a>
+                    <a class="btn btn-sm btn-primary" href="http://payum.org/">Payum</a>
                     <p>El resultado está colgado también en mi propio servidor de producción, una RaspberryPi2 montada usando:</p>
                     <br>
                     <a class="btn btn-sm btn-primary" href="https://www.archlinux.org/">Arch Linux ARMv7</a>
@@ -35,7 +36,8 @@
                     <a class="btn btn-sm btn-primary" href="https://mariadb.org/">MariaDB</a>
                     <a class="btn btn-sm btn-primary" href="http://php.net/">PHP5</a>
                     <a class="btn btn-sm btn-primary" href="https://letsencrypt.org/">Let's Encrypt</a>
-                    <p>Las imágenes son todas libres, y puedo sacar beneficio con ellas si quiero. Además, están optimizadas para web con la mejor compresión posible:</p>
+                    <a class="btn btn-sm btn-primary" href="https://www.paypal.com/">PayPal</a>
+                    <p>Las imágenes son de libres de copyright. Además, están optimizadas para la web:</p>
                     <br>
                     <a class="btn btn-sm btn-primary" href="http://game-icons.net/">GameIcons</a>
                     <a class="btn btn-sm btn-primary" href="https://imageoptim.com/">ImageOptim</a>
