--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -25,12 +25,28 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    <a class="btn btn-default" href="{{ path('archmage_payment_purchase_prepare') }}" role="button">20 Runas por<br><h2><i class="fa fa-fw fa-cc-paypal"></i> 0,99€</h2></a>
-                    <a class="btn btn-default btn-lg" href="#" role="button">50 Runas por<br><h1><i class="fa fa-fw fa-cc-paypal"></i> 2,99€</h1></a>
-                    <a class="btn btn-default" href="#" role="button">200 Runas por<br><h2><i class="fa fa-fw fa-cc-paypal"></i> 4,99€</h2></a>
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_quest' ) }}"><i class="fa fa-fw fa-map"></i>Aventura</a>
                 </div>
             </div>
         </div>
+        {% for pack in packs %}
+        <div class="col-xs-12 col-md-4">
+            <div class="panel panel-{{ pack.class }} text-center">
+                <div class="panel-heading"><h3 class="text-center">{{ pack.name }}</h3></div>
+                <div class="panel-body text-center">
+                    <p class="lead" style="font-size:40px"><strong>{{ pack.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack.price }}€</strong></p>
+                </div>
+                <ul class="list-group list-group-flush text-center">
+                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Derrota a tus enemigos</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-times"></i>Salva a los gnomos</li>
+                    <li class="list-group-item"><i class="fa fa-fw fa-check"></i>{{ pack.lore }}</li>
+                </ul>
+                <div class="panel-footer">
+                    <a class="btn btn-lg btn-block btn-default" href="{{ path('archmage_payment_purchase_prepare', {'id': pack.id} ) }}" role="button"><i class="fa fa-fw fa-paypal"></i> Comprar</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
         {% for artifact in artifacts if artifact.cost > 0 %}
         <div class="col-xs-12 col-md-6" {% if loop.first %}id="tour-market"{% endif %}>
             <div class="panel panel-artifact">
