--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,8 +16,10 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 5.</li>
-                        <li>Ahora las recetas de alquimia cuestan <span class="label label-artifact">Runas</span> además de <span class="label label-extra">Oro</span>.</li>
-                        <li>Ahora pueden comprarse <span class="label label-artifact">Runas</span> a través de PayPal.</li>
+                        <li>Mejorados los mensajes de error durante el login, el registro y la recuperación y el cambio de contraseñas.</li>
+                        <li>Ahora es necesario introducir un correo electrónico válido para registrarse, ya que se enviará un enlace para activar la cuenta.</li>
+                        <li>Ahora las recetas de alquimia piden también <span class="label label-artifact">Runas</span>.</li>
+                        <li>Ahora pueden comprarse <span class="label label-artifact">Packs de Runas</span> en el Mercado, a través de PayPal.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta abierta</div>
