Realizando pruebas para mandar emails con html usando MailCommand.

--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -32,7 +32,7 @@
             <div class="panel panel-default"><a name="intro"></a>
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-question-circle"></i>Introducción</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>En la desolada tierra de W&yuml;z&auml;rd, asumirás el rol de un mag@ novici@ intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
+                    <p>En la desolada tierra de W&yuml;z&auml;rd, asumirás el rol de un aprendiz intentando hacerse un hueco en un mundo plagado de enemigos. Competirás contra otros jugadores y NPCs por la supremacía en una carrera económica y militar, investigando diversos y poderosos <span class="label label-extra">Hechizos</span>, reclutando gran variedad de <span class="label label-extra">Unidades</span>, contratando <span class="label label-extra">Héroes</span> que ayudarán en tu campaña y encontrando misteriosos <span class="label label-artifact">Artefactos</span> que usar en tu beneficio, o incluso en perjuicio de otros.</p>
                 </div>
             </div>
             <div class="panel panel-default"><a name="multicuentas"></a>
