Cambiado theme de fondo para luchar contra el copyright, mejoradas algunas vistas, cambiado el about, mejorados los estilos, cambiados algunos packs.

--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -14,33 +14,34 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center">W&yuml;z&auml;rd</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>He desarrollado este juego completamente desde cero para demostrar mis habilidades como desarrollador web, basándome en un antigüo juego al que solía jugar cuando era muy joven: Archimago. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
+                    <p>He desarrollado este juego completamente desde cero para demostrar mis habilidades como desarrollador web, basándome en un antigüo juego que solía divertirme cuando era muy joven: ArchMage. Ya lo hice una vez, como proyecto de fin de módulo, y ahora lo he hecho de nuevo con tecnología actual. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
                     <br>
-                    <a class="btn btn-sm btn-primary" href="http://symfony.com/">Symfony2</a>
-                    <a class="btn btn-sm btn-primary" href="http://www.doctrine-project.org/">Doctrine2</a>
-                    <a class="btn btn-sm btn-primary" href="http://getbootstrap.com/css/">Bootstrap3</a>
-                    <a class="btn btn-sm btn-primary" href="https://jquery.com/">jQuery11</a>
-                    <a class="btn btn-sm btn-primary" href="http://www.w3.org/TR/html5/">HTML5</a>
-                    <a class="btn btn-sm btn-primary" href="http://www.w3.org/Style/CSS/current-work">CSS3</a>
-                    <a class="btn btn-sm btn-primary" href="https://getcomposer.org/">Composer</a>
-                    <a class="btn btn-sm btn-primary" href="http://bower.io/">Bower</a>
-                    <a class="btn btn-sm btn-primary" href="https://git-scm.com/">Git</a>
-                    <a class="btn btn-sm btn-primary" href="https://www.jetbrains.com/phpstorm/">PHPStorm</a>
-                    <a class="btn btn-sm btn-primary" href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
-                    <a class="btn btn-sm btn-primary" href="http://datatables.net/">DataTables</a>
-                    <a class="btn btn-sm btn-primary" href="http://payum.org/">Payum</a>
-                    <p>El resultado está colgado también en mi propio servidor de producción, una RaspberryPi2 montada usando:</p>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://symfony.com/">Symfony2</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://www.doctrine-project.org/">Doctrine2</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://getbootstrap.com/css/">Bootstrap3</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://jquery.com/">jQuery11</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://www.w3.org/TR/html5/">HTML5</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://www.w3.org/Style/CSS/current-work">CSS3</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://getcomposer.org/">Composer</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://bower.io/">Bower</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://git-scm.com/">Git</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://www.jetbrains.com/phpstorm/">PHPStorm</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://fortawesome.github.io/Font-Awesome/">FontAwesome</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://datatables.net/">DataTables</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://payum.org/">Payum</a>
+                    <p>El resultado está colgado también en mi propio servidor de producción, una RaspberryPi2, usando:</p>
                     <br>
-                    <a class="btn btn-sm btn-primary" href="https://www.archlinux.org/">Arch Linux ARMv7</a>
-                    <a class="btn btn-sm btn-primary" href="https://httpd.apache.org/">Apache2</a>
-                    <a class="btn btn-sm btn-primary" href="https://mariadb.org/">MariaDB</a>
-                    <a class="btn btn-sm btn-primary" href="http://php.net/">PHP5</a>
-                    <a class="btn btn-sm btn-primary" href="https://letsencrypt.org/">Let's Encrypt</a>
-                    <a class="btn btn-sm btn-primary" href="https://www.paypal.com/">PayPal</a>
-                    <p>Las imágenes son de libres de copyright. Además, están optimizadas para la web:</p>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://www.archlinux.org/">Arch Linux ARMv7</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://httpd.apache.org/">Apache2</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://mariadb.org/">MariaDB</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://php.net/">PHP5</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://letsencrypt.org/">Let's Encrypt</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://www.paypal.com/">PayPal</a>
+                    <p>Las imágenes son todas libres con Creative Commons. Además, están optimizadas para la web:</p>
                     <br>
-                    <a class="btn btn-sm btn-primary" href="http://game-icons.net/">GameIcons</a>
-                    <a class="btn btn-sm btn-primary" href="https://imageoptim.com/">ImageOptim</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://game-icons.net/">GameIcons</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://www.freepik.com/">FreePik</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="https://imageoptim.com/">ImageOptim</a>
                 </div>
                 <div class="panel-footer text-center">
                     <i class="fa fa-fw fa-lg fa-twitter"></i><a href="https://twitter.com/fergardi" class="link">@fergardi</a>
