--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -202,7 +202,7 @@
                         <thead>
                             <tr>
                                 <th class="text-center">Posesión</th>
-                                <th class="text-center"><i class="fa fa-fw fa-rocket" data-toggle="tooltip" data-placement="top" title="Poder de tu Reino"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-hashtag" data-toggle="tooltip" data-placement="top" title="Cantidad"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-rocket" data-toggle="tooltip" data-placement="top" title="Poder de tu Reino"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-shield" data-toggle="tooltip" data-placement="top" title="Defensa Física de tu Reino"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-chain-broken" data-toggle="tooltip" data-placement="top" title="Defensa Mágica de tu Reino"></i></th>
