--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -1,7 +1,7 @@
 body {
     text-rendering: auto;
 }
-/* default background for each faction */
+/* default background */
 img.background {
     /* Set rules to fill background */
     min-height: 100%;
@@ -21,7 +21,7 @@ img.background {
         margin-left: -512px; }
 }
 .panel, .jumbotron, .alert, .navbar, .well, .table, ul.pagination, .searchbox, .popover {
-    opacity: 0.95 !important;
+    opacity: 0.90 !important;
     box-shadow: 3px 3px 15px black;
 }
 .page-header {
@@ -407,3 +407,7 @@ html {-webkit-text-size-adjust: none !important;}
 .popover.right > .arrow:after { border-right-color: black; }
 .popover.bottom > .arrow:after { border-bottom-color: black; }
 .popover.left > .arrow:after { border-left-color: black; }
+/* PANEL PRICING */
+.panel-pricing .panel-heading {
+    padding: 20px 10px;
+}
