Avanzando con los pagos por paypal. Solo falta realizar la accion cuando se completa el pago y detallar mejor la factura.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -68,7 +68,7 @@
                     <h2>Pack Aprendiz</h2>
                 </div>
                 <div class="panel-body">
-                    <p class="text-pack"><strong>+{{ pack1.runes }}<i class="fa fa-fw fa-ils"></i>/ <sup>€</sup>{{ pack1.price }}</strong></p>
+                    <p class="text-pack"><strong>+{{ pack1.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack1.price }}<sup>€</sup></strong></p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a un <span class="label label-success"><i class="fa fa-fw fa-coffee"></i>café</span>!</li>
@@ -88,7 +88,7 @@
                     <h2>Pack Hechicero</h2>
                 </div>
                 <div class="panel-body">
-                    <p class="text-pack"><strong>+{{ pack2.runes }}<i class="fa fa-fw fa-ils"></i>/ <sup>€</sup>{{ pack2.price }}</strong></p>
+                    <p class="text-pack"><strong>+{{ pack2.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack2.price }}<sup>€</sup></strong></p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a una <span class="label label-quest"><i class="fa fa-fw fa-beer"></i>pinta</span>!</li>
@@ -108,7 +108,7 @@
                     <h2>Pack Archimago</h2>
                 </div>
                 <div class="panel-body">
-                    <p class="text-pack"><strong>+{{ pack3.runes }}<i class="fa fa-fw fa-ils"></i>/ <sup>€</sup>{{ pack3.price }}</strong></p>
+                    <p class="text-pack"><strong>+{{ pack3.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack3.price }}<sup>€</sup></strong></p>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i class="fa fa-fw fa-check"></i>Invítame a un <span class="label label-danger"><i class="fa fa-fw fa-glass"></i>whiskey</span>!</li>
