Paypal funcionando, falta preparar las credenciales de la cuenta principal y quitar el modo sandbox.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -65,7 +65,7 @@
             <div class="panel panel-success panel-pricing text-center">
                 <div class="panel-heading">
                     <i class="fa fa-fw fa-3x fa-gift"></i>
-                    <h2>Pack Aprendiz</h2>
+                    <h2>Pack del Aprendiz</h2>
                 </div>
                 <div class="panel-body">
                     <p class="text-pack"><strong>+{{ pack1.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack1.price }}<sup>€</sup></strong></p>
@@ -85,7 +85,7 @@
             <div class="panel panel-quest panel-pricing text-center">
                 <div class="panel-heading">
                     <i class="fa fa-fw fa-3x fa-gift"></i>
-                    <h2>Pack Hechicero</h2>
+                    <h2>Pack del Hechicero</h2>
                 </div>
                 <div class="panel-body">
                     <p class="text-pack"><strong>+{{ pack2.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack2.price }}<sup>€</sup></strong></p>
@@ -105,7 +105,7 @@
             <div class="panel panel-danger panel-pricing text-center">
                 <div class="panel-heading">
                     <i class="fa fa-fw fa-3x fa-gift"></i>
-                    <h2>Pack Archimago</h2>
+                    <h2>Pack del Archimago</h2>
                 </div>
                 <div class="panel-body">
                     <p class="text-pack"><strong>+{{ pack3.runes }}<i class="fa fa-fw fa-ils"></i>/ {{ pack3.price }}<sup>€</sup></strong></p>
