Arreglando cosas para la season5. Eliminando apocalipis.

--- a/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/about.html.twig
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading text-center">W&yuml;z&auml;rd</div>
                 <div class="panel-body text-responsive text-only">
-                    <p>He desarrollado este juego completamente desde cero para demostrar mis habilidades como desarrollador web, basándome en un antigüo juego que solía divertirme cuando era muy joven: ArchMage. Ya lo hice una vez, como proyecto de fin de módulo, y ahora lo he hecho de nuevo con tecnología actual. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
+                    <p>He desarrollado este juego completamente desde cero para demostrar mis habilidades como desarrollador web, basándome en un antigüo juego que solía divertirme cuando era muy joven: ArchMage. Ya lo hice una vez hace algunos años, como proyecto de Formación Profesional, y ahora lo he hecho de nuevo con tecnología actual. Para ello, he empleado los siguientes frameworks y herramientas de desarrollo:</p>
                     <br>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://symfony.com/">Symfony2</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="http://www.doctrine-project.org/">Doctrine2</a>
@@ -39,9 +39,10 @@
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://www.paypal.com/">PayPal</a>
                     <p>Las imágenes son todas libres con Creative Commons. Además, están optimizadas para la web:</p>
                     <br>
-                    <a class="btn btn-sm btn-primary" target="_blank" href="http://game-icons.net/">GameIcons</a>
-                    <a class="btn btn-sm btn-primary" target="_blank" href="http://www.freepik.com/">FreePik</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://game-icons.net/">Iconos de GameIcons</a>
+                    <a class="btn btn-sm btn-primary" target="_blank" href="http://www.freepik.es/foto-gratis/paisaje_755890.htm">Fondo de FreePik</a>
                     <a class="btn btn-sm btn-primary" target="_blank" href="https://imageoptim.com/">ImageOptim</a>
+                    <p>Un cariñoso saludo a todos aquellos que me han ayudado a hacer este juego posible.</p>
                 </div>
                 <div class="panel-footer text-center">
                     <i class="fa fa-fw fa-lg fa-twitter"></i><a href="https://twitter.com/fergardi" class="link">@fergardi</a>
