--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -84,7 +84,7 @@
         <div class="col-xs-12 col-md-4">
             <div class="panel panel-quest panel-pricing text-center">
                 <div class="panel-heading">
-                    <i class="fa fa-fw fa-3x fa-gift"></i>
+                    <i class="fa fa-fw fa-3x fa-gift"></i><i class="fa fa-fw fa-3x fa-gift"></i>
                     <h2>Pack del Hechicero</h2>
                 </div>
                 <div class="panel-body">
@@ -104,7 +104,7 @@
         <div class="col-xs-12 col-md-4">
             <div class="panel panel-danger panel-pricing text-center">
                 <div class="panel-heading">
-                    <i class="fa fa-fw fa-3x fa-gift"></i>
+                    <i class="fa fa-fw fa-3x fa-gift"></i><i class="fa fa-fw fa-3x fa-gift"></i><i class="fa fa-fw fa-3x fa-gift"></i>
                     <h2>Pack del Archimago</h2>
                 </div>
                 <div class="panel-body">
